--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,13 +1,158 @@
-body {
+/* - - - VARIABELS - - - */
+
+:root {
+  --bgColor: #29354e;
+  --textColor: #d5d6d5;
+  --titleColor: #f32d29;
+  --navbarHeight: 52px;
+}
+
+/* GLOBAL */
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+}
+
+body {
+  background-color: var(--bgColor);
+  font-family: 'Lato', sans-serif;
+  font-size: 15px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
-  font-size: 20px;
+a {
+  text-decoration: none;
+}
+
+p {
+  margin: 0.8rem 0;
+}
+
+img {
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+}
+
+/* UTILITY CLASSES */
+
+.text-primary {
+  color: #f32d29;
+}
+
+.text-color {
+  color: #d5d6d5;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.bg-dark {
+  background-color: #f32d29;
+  color: #29354e;
+}
+
+.l-heading {
+  font-size: 4rem;
+  font-weight: 900;
+  margin-bottom: 0.1rem;
+  text-transform: uppercase;
+}
+
+.lead {
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+.btn-light {
+  color: #29354e;
+  background: #d5d6d5;
+  padding: 0.5rem 2rem;
+  font-size: 1rem;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 5px;
+}
+.btn-hover:hover {
+  background-color: #f32d29;
+  color: #29354e;
+  transform: scale(0.95);
+  transition: all 0.5s ease-in-out;
+}
+
+.py-1 {
+  padding: 1rem 0;
+}
+.py-2 {
+  padding: 2rem 0;
+}
+.py-3 {
+  padding: 3rem 0;
+}
+
+/* NAVBAR */
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  position: fixed;
+  top: 0px;
+  z-index: 1;
+  width: 100%;
+}
+#navbar .logo {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
+#navbar ul {
+  display: flex;
+  align-items: center;
+}
+
+#navbar ul li a {
+  padding: 0.8rem;
+  text-transform: uppercase;
+  border-radius: 5px;
+}
+
+/* SHOWCASE */
+#showcase {
+  background: url('./img/macbookProBlue.jpg') no-repeat center center/cover;
+  height: 100vh;
+}
+
+#showcase .showcase-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: flex-end;
+  justify-content: center;
+  /* text-align: end; */
+  width: 50%;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  overflow: hidden;
+}
+
+.card-form {
+  opacity: 0.9;
+}
+
+.latest-profiles-img {
+  width: 40px;
+  height: 40px;
+}
+
+.form-control::placeholder {
+  color: #bbb !important;
 }
