--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -52,16 +52,21 @@ ul {
   text-align: center;
 }
 
+.text-bold {
+  font-weight: 900;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
 .bg-dark {
   background-color: #f32d29;
   color: #29354e;
 }
 
-.l-heading {
+.display-4 {
   font-size: 4rem;
-  font-weight: 900;
-  margin-bottom: 0.1rem;
-  text-transform: uppercase;
 }
 
 .lead {
@@ -81,8 +86,8 @@ ul {
 .btn-hover:hover {
   background-color: #f32d29;
   color: #29354e;
-  transform: scale(0.95);
-  transition: all 0.5s ease-in-out;
+  transform: scale(0.99);
+  transition: all 0.3s ease-in-out;
 }
 
 .py-1 {
@@ -93,6 +98,21 @@ ul {
 }
 .py-3 {
   padding: 3rem 0;
+}
+.py-4 {
+  padding: 4rem 0;
+}
+.my-1 {
+  margin: 1rem 0;
+}
+.my-2 {
+  margin: 2rem 0;
+}
+.my-3 {
+  margin: 3rem 0;
+}
+.my-4 {
+  margin: 4rem 0;
 }
 
 /* NAVBAR */
@@ -144,15 +164,32 @@ ul {
   overflow: hidden;
 }
 
-.card-form {
-  opacity: 0.9;
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin: 0 5rem;
 }
 
-.latest-profiles-img {
-  width: 40px;
-  height: 40px;
+.form-group span {
+  align-items: flex-start;
 }
 
-.form-control::placeholder {
-  color: #bbb !important;
+.form-control input {
+  margin: 1rem 0 0.25rem 0;
+  padding: 0.5rem;
+  width: 100%;
+  font-size: 1.25rem;
+  color: #29354e;
+  font-weight: 400;
+  border-radius: 5px;
+  border: none;
+}
+.form-control span {
+  color: #f32d29;
+  padding-left: 0.5rem;
+}
+.form-control input::placeholder {
+  font-size: 1rem;
+  font-weight: 400;
+  /* color: #d5d6d5 !important; */
 }
