--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -174,8 +174,9 @@ ul {
   align-items: flex-start;
 }
 
-.form-control input {
-  margin: 1rem 0 0.25rem 0;
+.form-control input,
+.form-control textarea {
+  margin: 0.25rem 0 0.25rem 0;
   padding: 0.5rem;
   width: 100%;
   font-size: 1.25rem;
@@ -184,9 +185,16 @@ ul {
   border-radius: 5px;
   border: none;
 }
-.form-control span {
-  color: #f32d29;
-  padding-left: 0.5rem;
+
+.form-control textarea {
+  height: 200px;
+}
+.form-error {
+  margin-top: 0.55rem;
+  padding-left: 0.25rem;
+}
+.form-info {
+  padding-left: 0.25rem;
 }
 .form-control input::placeholder {
   font-size: 1rem;
