--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -267,3 +267,10 @@ ul {
   justify-content: center;
   width: 100%;
 }
+
+.skill-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
