--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -126,6 +126,9 @@ ul {
   transition: all 0.3s ease-in-out;
 }
 
+.py-0 {
+  padding: 0.001rem 0;
+}
 .py-1 {
   padding: 1rem 0;
 }
@@ -137,6 +140,10 @@ ul {
 }
 .py-4 {
   padding: 4rem 0;
+}
+/* MARGIN */
+.my-0 {
+  margin: 0.001rem 0;
 }
 .my-1 {
   margin: 1rem 0;
@@ -284,6 +291,29 @@ ul {
 .skill-item {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+  border: 2px solid #d5d6d5;
+  border-radius: 10px;
+  padding: 1rem;
+}
+.portfolio-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+}
+.portfolio-image {
+  width: 500px;
+}
+.portfolio-content {
+  display: flex;
+  flex-direction: column;
+  color: #d5d5d5;
+}
+.portfolio-item {
+  display: flex;
+  flex-direction: row;
   align-items: center;
   margin: 1rem;
   border: 2px solid #d5d6d5;
