--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -222,14 +222,13 @@ ul {
 .nav-container {
   position: fixed;
   top: 0px;
-  background-color: transparent;
   transition: top 0.3s;
 }
 
 .nav-container-sticky {
   position: fixed;
-  opacity: 0.9;
-  z-index: 5;
+  /* opacity: 0.9; */
+  /* z-index: 5; */
   border-bottom: 1px solid rgb(34, 43, 65);
   top: -69px;
 }
@@ -239,11 +238,11 @@ ul {
   display: none;
 }
 #nav {
+  background-color: #29354ef5;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  background-color: #29354e;
 }
 
 #nav .logo {
@@ -441,5 +440,10 @@ ul {
 @media only screen and (max-width: 375px) {
   html {
     font-size: 12px;
+  }
+}
+@media only screen and (max-width: 320px) {
+  html {
+    font-size: 10px;
   }
 }
