--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -216,7 +216,7 @@ li {
 .container {
 	max-width: 1100px;
 	margin: 0 auto;
-	padding: 0 2rem;
+	padding: 0 1rem;
 	overflow: hidden;
 }
 
@@ -354,14 +354,14 @@ li {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: flex-start;
-	justify-content: center;
+	justify-content: space-around;
 }
 .skill-item {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin: 1rem;
-	padding: 1rem;
+	margin: 0.5rem;
+	width: 31%;
 }
 .skill-item img {
 	width: 7rem;
@@ -386,11 +386,14 @@ li {
 	flex-direction: column;
 	width: 50%;
 }
+.portfolio-content h4 {
+	font-size: 1.75rem;
+}
+
 .portfolio-item {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	padding: 1rem;
 }
 
 .withBorder-1 {
